fix overflow

--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -2,6 +2,7 @@
     position: relative;
     overflow: hidden;
     height: calc(100vh - 116px);
+    min-height: 500px;
     display: flex;
     @media all and (max-width: get('responsive.xl')) {
         height: calc(100vh - 92px);
@@ -13,6 +14,9 @@
         margin: auto 0;
         z-index: 4;
         position: relative;
+        @media all and (max-height: 800px) {
+            transform: translateY(-90px);
+        }
     }
     &:after {
         content: '';
